--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -7,7 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="min-h-screen relative overflow-x-hidden"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
